# Ember

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Ember.qmlproject  Ember.qmlproject.qtds  Ember.qmlproject.qtds.c1ba125  EmberApp.cbp  README.md  build.sh  cmake_install.cmake  main.cpp  qmlmodules
.cmake/api/v1/reply/: cache-v2-fb577052c40063413a61.json  cmakeFiles-v1-41ba66ae5565eeeb79b2.json  codemodel-v2-f486c6a6bef86987dae8.json  directory-.-Debug-b7c16f5eb43076e8d2d2.json  directory-imports.Ember-Debug-4526aea30584d09f0ce0.json  index-2023-09-02T10-10-51-0510.json  target-Ember-Debug-94ddf54ccfff12c4df74.json  target-EmberApp-Debug-4f990549ee63cff6c870.json  target-EmberApp_autogen-Debug-e7af2fbf43a0bb506dc5.json  target-EmberApp_automoc_json_extraction-Debug-aae5e181378f481ea23d.json  target-EmberApp_qmlimportscan-Debug-febd2e9891d07db009c3.json  target-EmberApp_qmllint-Debug-68a90411956b3d7ba695.json  target-EmberApp_qmllint_json-Debug-9c9f307c2d2642d4c3b7.json  target-EmberApp_qmllint_module-Debug-972a5f24f52b7a27791f.json  (+178 more)
.qt/: QtDeploySupport.cmake
.qt/deploy_qml_imports/: EmberApp.cmake
.qt_plugins/: Qt6_QmlPlugins_Imports_EmberApp.cmake  Qt6_QmlPlugins_Imports_EmberApp.rsp
.rcc/: EmberApp_raw_qml_0.qrc  configuration.qrc  qmake_Main.qrc
.rcc/qmlcache/: EmberApp_main_qml.cpp  EmberApp_qmlcache_loader.cpp
backend/api/: EM_FileTree.cpp  default_dirs.h
content/: Screen01.ui.qml  cmake_install.cmake
content/.rcc/: content_raw_qml_0.qrc  qmake_content.qrc
content/.rcc/qmlcache/: content_App_qml.cpp  content_Screen01.ui_qml.cpp
content/contentplugin_autogen/include/: contentplugin_contentPlugin.moc.d
gui/: styles.h
gui/components/: SpecialFolderButton.cpp  SpecialFolderButton.h
gui/handlers/: ClickHandler.cpp  ClickHandler.h
gui/views/: CentralWidget.cpp  CentralWidget.h  MainView.cpp  MainView.h  SearchBar.cpp  SearchBar.h  StatusBar.cpp  StatusBar.h
imports/: CMakeLists.txt  cmake_install.cmake
imports/Ember/: CMakeLists.txt  Emberplugin_EmberPlugin.cpp  Emberplugin_init.cpp  cmake_install.cmake  ember_qmltyperegistrations.cpp  qmldir
imports/Ember/.rcc/: Ember_raw_qml_0.qrc  qmake_Ember.qrc
imports/Ember/designer/: plugin.metainfo
qml/Ember/: Ember_qml_module_dir_map.qrc  qmldir
qml/FlowView/: FlowView_qml_module_dir_map.qrc
qml/Main/: EmberApp_qml_module_dir_map.qrc  qmldir
qml/content/: App.qml  Screen01.ui.qml  content_qml_module_dir_map.qrc
qmltypes/: EmberApp_foreign_types.txt
src/: import_qml_plugins.h  main.cpp
src/api/: EM_FileTree.cpp  EM_FileTree.h  Ember_Linux.cpp  Ember_Linux.h  default_dirs.cpp
(+14 files in other folders)
